# proyecto02_SO

./: CMakeLists.txt
Client/: client.c  statistics.c
include/: client_utils.h  common.h  server_utils.h
resources/: index.html
server/: fifo.c  forked.c  main.c  pre_forked.c  pre_threaded.c  threaded.c
